--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,9 +8,9 @@ variables:
 
 build_job:
   stage: build
-  image: docker:24.0.5
-  services:
-    - docker:24.0.5-dind
+  tags: 
+    - local-server
+
   script:
     - docker login -u $CI_REGISTRY_USER -p $CI_REGISTRY_PASSWORD $CI_REGISTRY
     - docker build -t $AIRFLOW_IMAGE -f Dockerfile.airflow .
